deploy/auth/migration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth-migration
spec:
  containers:
  - name: auth-migration
    image: muuren/migrations:latest
    imagePullPolicy: Always
    command: ["alembic"]
    args: ["upgrade", "head"]
  restartPolicy: Never
