deploy/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
